--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       go shopping;
     </li>
     <li>
-      clean room;
+      kill all humans;
     </li>
   </ol>
   <input type="text" class="input" name='new_task' value="test">
